--- a/src/scss/layouts/_hand.scss
+++ b/src/scss/layouts/_hand.scss
@@ -12,7 +12,7 @@
 
   .hand__title {
     @include title-settings('../../assets/img/title-hand.png');
-    z-index: 15;
+    z-index: 14;
   }
 }
 
